# Analyzing-Faces

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docs/: architecture.md
scripts/: run_realtime.py  train_mask_detector.py
src/analyzing_faces/: __init__.py
src/analyzing_faces/api/: app.py
src/analyzing_faces/config/: settings.py
src/analyzing_faces/models/: face_recognizer.py  mask_detector.py
src/analyzing_faces/pipelines/: realtime_analyzer.py
src/analyzing_faces/services/: attendance.py
tests/: test_attendance_service.py
